# plonk

./: .travis.yml  Cargo.toml  aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/: notes-prove-verify.md
docs /: notes-lp.md  notes-snark.md
examples/: 3_final_gadget_orientation.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/failure/: trait.Fail.js
implementors/plonk/transcript/: trait.TranscriptProtocol.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
plonk/: all.html  index.html  sidebar-items.js
plonk/commitment_scheme/: index.html
plonk/constraint_system/: index.html  sidebar-items.js
plonk/fft/: index.html  struct.EvaluationDomain.html  struct.Evaluations.html  struct.Polynomial.html
plonk/notes/: index.html  sidebar-items.js
plonk/proof_system/: index.html  sidebar-items.js  struct.PreProcessedCircuit.html  struct.Proof.html
plonk/transcript/: index.html  trait.TranscriptProtocol.html
src/: lib.rs
src/fft/: domain.rs
src/permutation/: constants.rs
src/plonk/: bit_iterator.rs.html  lib.rs.html  transcript.rs.html  util.rs.html
(+77 files in other folders)
