[package]
name = "plonk"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>",
           "Luke Pearson <luke@dusk.network>", 
           "CPerezz <carlos@dusk.network>"] 
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merlin = "2.0.0"
rand = "0.7.2"
rand_core = { version = "0.5", default-features = false }
# Built by default with "std", "alloc", "pairing", "groups" and "endo" features.
bls12_381 = { git = "https://github.com/dusk-network/bls12_381", branch = "master" }
itertools = "0.8.2"
rand_chacha = "0.2"
rayon = "1.3.0"
failure = { version = "0.1", default-features = false, features = ["derive"] }
bench-utils = { git = "https://github.com/scipr-lab/zexe/" }


[features]
print-trace = [ "bench-utils/print-trace" ]

[profile.release]
opt-level = 3
incremental = false
codegen-units = 1
debug  = false
rpath = false 
lto = true
overflow-checks = false

[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true